			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard
02-Sep-2004
~~~~~~~~~~~
Ensure that a panel applet's properties are set before starting the applet
(reported by Tony Houghton).

16-Aug-2004
~~~~~~~~~~~
Fixed panel menu positioning for multiple monitors with different resolutions
(Tony Houghton).
Use _NET_WM_STATE_BELOW to raise and lower the panel (Tony Houghton). Not
changing to type DOCK yet as it breaks some WMs.

25-Aug-2004
~~~~~~~~~~~
Use new GTK 2.2 functions to set window hints now that we don't support 2.0
anymore (Guido Schimmels).

23-Aug-2004
~~~~~~~~~~~
Plug a memory leak when loading SVG type icons (Stephen Watson).

18-Aug-2004
~~~~~~~~~~~
Fix for the Solaris extended attribute support (Stephen Watson). 

13-Aug-2004
~~~~~~~~~~~
Set minimum width of toolbar so that all buttons are visible (Stephen Watson).

10-Aug-2004
~~~~~~~~~~~
When adding an entry to the Recently Visited menu, remove its parent directory.
This stops the list filling up with near-duplicates when you have deeply
nested directories (Thomas Leonard).

08-Aug-2004
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

05-Aug-2004
~~~~~~~~~~~
For debugging, show the failed URI when dragging to the pinboard (Thomas
Leonard).

03-Aug-2004
~~~~~~~~~~~
Use Help icon instead of Info icon for popup help buttons (Thomas Leonard).

02-Aug-2004
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).

01-Aug-2004 (Release 2.1.3)
~~~~~~~~~~~
Build in ROX-Filer/build, not ~/build/ROX-Filer.

30-Jul-2004
~~~~~~~~~~~
Renamed Cancel to Close in the Properties box (suggested by Arnaud Calvo).
Updated some calls to use newer APIs, and allow compilation on systems where
deprecated widgets are disabled by default (reported by Vincent Lefèvre and
Guido Schimmels).
Bugfix: Panel icons were no longer shown highlighted when selected.

23-Jul-2004
~~~~~~~~~~~
Bugfix: When opening a new directory with saved settings, the filer would
	print a warning and then crash.

21-Jul-2004