@@ -1,6 +1,11 @@
 			ROX-Filer
 			A RISC OS-like filer for X
 			by Thomas Leonard
+06-Sep-2004
+~~~~~~~~~~~
+When resizing a window, only warp the pointer as much as necessary to keep
+it inside the window (Thomas Leonard).
+
 02-Sep-2004
 ~~~~~~~~~~~
 Ensure that a panel applet's properties are set before starting the applet
